--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    ================================================== -->
    <link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/layout.css">
+   <link rel="stylesheet" href="css/style.css">
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -72,43 +73,24 @@
 
    <!-- Intro Section
    ================================================== -->
-   <section id="intro">
+   <section id="intro" style="
+    margin-top: 50px;">
 
-      <!-- Flexslider Start-->
-	   <div id="intro-slider" class="flexslider">
+      <div class= "baudcol">
+         <div clas= "intro">
+            <p id= "introBaud">BaudPrint es una empresa 100% mexicana, dedicada a soluciones en diseño industrial
+               e impresión.
+            </p>
+            
+            <p>
+               <b>Lider en el medio</b>, especializados en soluciones innovadoras para nuestros
+               clientes en proyectos de la más alta calidad.
+            </p>
+            <p>contamos con el equipo y personal altamente capacitado, comprometido con la excelencia, calidad y servicio </p>
+         </div>                          
+      </div>
 
-		   <ul class="slides">
-
-			   <!-- Slide -->
-			   <li>
-				   <div class="row">
-					   <div class="col full">
-						   <div class="slider-text">
-							   <h2>Hello, we are <span>kreative</span>. We specialize in branding, websites and photography.</h2>
-							   <p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
-                        enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu.</p>
-						   </div>
-					   </div>
-				   </div>
-			   </li>
-
-            <!-- Slide -->
-			   <li>
-				   <div class="row">
-					   <div class="col full">
-						   <div class="slider-text">
-							   <h2>Take a look at some of <a href="#portfolio" title="">our works</a> or <a href="#contact" title="">get in
-                        touch</a> to discuss how we can help you.</h2>
-							   <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
-                        deleniti eos et accusamus.</p>
-						   </div>
-					   </div>
-				   </div>
-			   </li>
-
-		   </ul>
-	   </div>
-	   <!-- Flexslider End-->
+      </div>
 
    </section> <!-- Intro Section End-->
 
