--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<!--[if lt IE 8 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 8)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if lt IE 8 ]><html class="ie ie7" lang="es"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" lang="es"> <![endif]-->
+<!--[if (gte IE 8)|!(IE)]><!--><html lang="es"> <!--<![endif]-->
 <head>
 
 
    <!--- Basic Page Needs
    ================================================== -->
-	<meta charset="utf-8">
-	<title>Baudprint</title>
+	<meta charset="utf-8" />
+	<title>Bauprint</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -74,20 +74,20 @@
    <!-- Intro Section
    ================================================== -->
    <section id="intro" style="
-    margin-top: 50px;">
+    padding-top: 70px;">
 
       <div class= "baudcol">
          <div clas= "intro">
             <p id= "introBaud">BaudPrint es una empresa 100% mexicana, dedicada a soluciones en diseño industrial
                e impresión.
             </p>
-            
+
             <p>
                <b>Lider en el medio</b>, especializados en soluciones innovadoras para nuestros
                clientes en proyectos de la más alta calidad.
             </p>
             <p>contamos con el equipo y personal altamente capacitado, comprometido con la excelencia, calidad y servicio </p>
-         </div>                          
+         </div>
       </div>
 
       </div>
@@ -753,7 +753,7 @@
 
             <h2><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Host This Template on Dreamhost.</a></h2>
             <p>Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>. 
+					Get <span>$50 off</span> when you sign up with the promocode <span>STYLESHOUT</span>.
 					<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. --></p>
 
          </div>
@@ -877,7 +877,7 @@
          <div class="col g-7">
             <ul class="copyright">
                <li>&copy; 2014 Kreative</li>
-               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout">Styleshout</a></li>               
+               <li>Design by <a href="http://www.styleshout.com/" title="Styleshout">Styleshout</a></li>
             </ul>
          </div>
 
