--- a/index.html
+++ b/index.html
@@ -191,73 +191,160 @@
 
 			   <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-01"><img src="images/portfolio/cosmic-sneakers.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-01"><img src="images/portfolio/vector-flower.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Cosmic Sneakers</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-02"><img src="images/portfolio/milk-splash.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-02"><img src="images/portfolio/eve.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Milk Splash</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-03"><img src="images/portfolio/eve.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-03"><img src="images/portfolio/vector-flower.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Eve</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-04"><img src="images/portfolio/sneaker-splash.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-04"><img src="images/portfolio/eve.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Sneaker Splash</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-05"><img src="images/portfolio/judah.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-05"><img src="images/portfolio/vector-flower.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Judah</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-06"><img src="images/portfolio/vector-flower.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-06"><img src="images/portfolio/eve.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Vector Flower</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-07"><img src="images/portfolio/clock.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-07"><img src="images/portfolio/vector-flower.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Clock</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-08"><img src="images/portfolio/fields.jpg" alt=""/></a>
+					   <a href="#" data-reveal-ids="modal-08"><img src="images/portfolio/eve.jpg" alt=""/>
 					   <div class="portfolio-item-meta">
-						   <h5><a href="#">Fields</a></h5>
-					   </div>
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+			   <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-01"><img src="images/portfolio/vector-flower.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-02"><img src="images/portfolio/eve.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-03"><img src="images/portfolio/vector-flower.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-04"><img src="images/portfolio/eve.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-05"><img src="images/portfolio/vector-flower.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-06"><img src="images/portfolio/eve.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-07"><img src="images/portfolio/vector-flower.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-08"><img src="images/portfolio/eve.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div><div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-01"><img src="images/portfolio/vector-flower.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
+               </div>
+			   </div>
+
+            <div class="col portfolio-item">
+               <div class="item-wrap">
+					   <a href="#" data-reveal-ids="modal-02"><img src="images/portfolio/eve.jpg" alt=""/>
+					   <div class="portfolio-item-meta">
+						   <h5>title</h5>
+					   </div></a>
                </div>
 			   </div>
 
